--- a/Tutorial2Lab/Views/Home/About.cshtml
+++ b/Tutorial2Lab/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Use this area to provide additional information TEST Version 2 only.</p>
